--- a/theme/amzayo/template/footer.html
+++ b/theme/amzayo/template/footer.html
@@ -1,12 +1,9 @@
 {{define "theme-custom/footer"}}
 <div class="ui inverted vertical footer segment">
     <div class="ui center aligned is-size-7 container">
-        <b>&copy; <a href="/">{{.Conf.Site.Brand}}</a></b> | <small>Powered by <a
-                href="https://github.com/Huijiyingyingying" target="_blank">1m1ng</a>
+        <b>&copy; <a href="/">{{.Conf.Site.Brand}}</a></b> | <small>Powered by Nezha (D:V0.20.13，A:V0.20.5)
             </small> | <small> Designed by 
-                <a href="https://lvliao.cc" target="_blank">LvGJ</a> & 
-                <a href="https://blog.amzayo.com" target="_blank">Amzayo</a> & 
-                <a href="https://github.com/Huijiyingyingying" target="_blank">1m1ng</a>
+                <a href="https://github.com/CarrolChen" target="_blank">CarrolChen</a>
             </small>
     </div>
 </div>
