--- a/theme/amzayo/template/footer.html
+++ b/theme/amzayo/template/footer.html
@@ -1,10 +1,7 @@
 {{define "theme-custom/footer"}}
 <div class="ui inverted vertical footer segment">
     <div class="ui center aligned is-size-7 container">
-        <b>&copy; <a href="/">{{.Conf.Site.Brand}}</a></b> | <small>Powered by Nezha (D:V0.20.13，A:V0.20.5)
-            </small> | <small> Designed by 
-                <a href="https://github.com/CarrolChen" target="_blank">CarrolChen</a>
-            </small>
+        <b>&copy; <a href="/">{{.Conf.Site.Brand}}</a></b> | Powered by Nezha (D:V0.20.13，A:V0.20.5) | Designed by <a href="https://github.com/CarrolChen" target="_blank">CarrolChen</a>
     </div>
 </div>
 <script src="https://cdn.staticfile.org/jquery/3.6.0/jquery.min.js"></script>
