--- a/theme/amzayo/template/header.html
+++ b/theme/amzayo/template/header.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="/static/semantic-ui-alerts.min.css">
     <link rel="stylesheet" type="text/css" href="/static-custom/amzayo.css">
     <!-- <link rel="stylesheet" type="text/css" href="/static-custom/amzayo_filter.css"> -->
-    <link rel="shortcut icon" type="image/png" href="https://p.1m1ng.top/images/icon.webp" />
+    <link rel="shortcut icon" type="image/png" href="https://img14.360buyimg.com/sku/jfs/t1/162473/22/23012/3692/6184b06aEa95a0194/8c51cebbd04b95b2.png"/>
 </head>
 
 <body>
