--- a/theme/amzayo/template/menu.html
+++ b/theme/amzayo/template/menu.html
@@ -2,7 +2,7 @@
 <div class="ui large top fixed menu nb-menu">
     <div class="ui container">
         <a class="item" href="/">
-            <img src="https://p.1m1ng.top/images/icon.webp">
+            <img src="https://img14.360buyimg.com/sku/jfs/t1/162473/22/23012/3692/6184b06aEa95a0194/8c51cebbd04b95b2.png">
         </a>
         {{if .IsAdminPage}}
         <a class='item{{if eq .MatchedPath "/server"}} active{{end}}' href="/server"><i class="server icon"></i>{{tr "Server"}}</a>
